Java API build fixed